--- a/README
+++ b/README
@@ -99,7 +99,9 @@ match is one of:
 	IPv4 address, e.g. 1.1.1.1
 - <ipv6addr>
 	IPv6 address, e.g. ff01::1
-- dns:<regex>
+- dns:<pattern>
+	fnmatch() pattern supporting * and ? as wildcard characters
+- dns:/<regex>
 	POSIX.2 extended regular expression for matching hostnames
 	Only works, if dns lookups are passed to qosify via the add_dns_host ubus call.
 
